--- a/Part B/Program 6/Program 6.html
+++ b/Part B/Program 6/Program 6.html
@@ -1,68 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>String Operations</title>
 </head>
 <body>
-    Enter the string : <input type = "text" id  = "stringEntry"><br><br>
-    Enter the substring : <input type = "text" id  = "subString">
-    <input type = "button" value = "Result" onclick="intaliseFunctions()">
-    <h3>Characters : </h3> <span id = "char"></span><br><br>
-    <h3>Whitespaces : </h3> <span id = "ws"></span><br><br>
-    <h3>Special Characters : </h3> <span id = "sc"></span><br><br>
-    <h3>Number of Digits : </h3> <span id = "nod"></span><br><br><br>
-    <h3>String occurences in the substring: </h3><span id = "search"></span><br><br>
-    <h3>Pattern obtained in the string : </h3><span id = "patternobt"></span><br><br>
-
+    <form>
+        Input String:  <input type="text" id="myInput"><br><br>
+        Search String: <input type="text" id="mySearch"><br><br>
+        <button onclick="myfunction()">Submit</button>
+    </form>
     <script>
-        function countOccurences(str){
-            alert()
-            var characters = 0 ;
-            var whitespaces = 0;
-            var specialCharacters = 0;
-            var digit = 0;
-            for (var i = 0 ; i < str.length; i++){
-                var ch = str[i];
-                if((ch>="a" && ch<="z")|| (ch>="A" && ch<="Z")) characters++;
-                else if(ch>='0' && ch<='9') digit++;
-                else if (ch==" ") whitespaces++;
-                else specialCharacters++;
-            }
-        document.getElementById("char").innerHTML = characters;
-        document.getElementById("ws").innerHTML = whitespaces;
-        document.getElementById("sc").innerHTML = specialCharacters;
-        document.getElementById("nod").innerHTML = digit;
+        function myfunction(){
+         var str = document.getElementById("myInput").value;
+         var search = document.getElementById("mySearch").value;
+         var index = str.indexOf(search);
+         var num = 0; 
+         var whitespace = 0; 
+         var alphabets = 0;
+         let count = str.split(search).length - 1;
+        for(let i=0; i < str.length; i++) { 
+            if(str[i] >= '0' && str[i] <= '9') 
+                num++; 
+            else if (str[i] === ' ') 
+                whitespace++; 
+            else
+                alphabets++; 
+        } 
+        document.write("Entered String: " + str)
+        document.write("<br><br>")
+        document.write("Digits: " + num); 
+        document.write("<br><br>")
+        document.write("Whitespaces: \n" + whitespace); 
+        document.write("<br><br>")
+        document.write("Alphabets: \n" + alphabets); 
+        document.write("<br><br>")
+        document.write("Index: \n" + index); 
+        document.write("<br><br>")
+        document.write("occurances: \n" + count); 
         }
-        function printIndex(str, word){
-            var flag = false;
-        for (var i = 0 ; i < str.length ; i++){
-        if (str.substring(i , word.length+i)==word){
-            document.getElementById("search").innerHTML = i;
-            flag = true;
-                }
-            if (flag==false) document.getElementById("search").innerHTML = "NONE";
-             }
-          }
-        function findSubString(str,word){
-            let a = str.split(" ");
-            var count  = 0;
-            for (i= 0 ; i < str.length ; i++){
-                if(word == a[i]){
-                    count++;
-                }
-            }
-            document.getElementById("patternobt").innerHTML = count;
-        }
-    function intaliseFunctions(){
-        var a = document.getElementById("stringEntry").value;
-        var b = document.getElementById("subString").value;
-        countOccurences(a);
-        printIndex(a,b);
-        findSubString(a,b);
-    }
-    </script>
+        </script>
 </body>
 </html>
